@@ -1,11 +1,12 @@
 5.1.0:
-- New: Another sandy Pixel 6 wallpaper
+- New: another sandy Pixel 6 wallpaper
 - New: Danish and Hebrew translations
 - New: additional blue (new default) and purple app themes
 - Improved: random wallpaper option
 - Improved: app theme selection and app colors
 - Improved: bold text now correctly styled even if system font is used as fallback (Chinese, Hebrew and Uyghur)
 - Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
+- Improved: disabled options in parallax section now greyed out
 - Fixed: unchanged text contrast when switching dark mode inside an app
 - Fixed: hopefully some crashes
 
